@@ -14,8 +14,6 @@ import com.hcmus.mentor.backend.controller.payload.response.messages.MessageDeta
 import com.hcmus.mentor.backend.controller.payload.response.messages.MessageResponse;
 import com.hcmus.mentor.backend.controller.payload.response.users.ProfileResponse;
 import com.hcmus.mentor.backend.controller.payload.response.users.ShortProfile;
-import static com.hcmus.mentor.backend.controller.payload.returnCode.GroupReturnCode.*;
-import static com.hcmus.mentor.backend.controller.payload.returnCode.InvalidPermissionCode.INVALID_PERMISSION;
 import com.hcmus.mentor.backend.domain.*;
 import com.hcmus.mentor.backend.repository.*;
 import com.hcmus.mentor.backend.security.UserPrincipal;
@@ -25,18 +23,6 @@ import com.hcmus.mentor.backend.util.DateUtils;
 import com.hcmus.mentor.backend.util.FileUtils;
 import com.hcmus.mentor.backend.util.MailUtils;
 import io.minio.errors.*;
-import java.io.*;
-import java.security.GeneralSecurityException;
-import java.security.InvalidKeyException;
-import java.security.NoSuchAlgorithmException;
-import java.text.DateFormat;
-import java.text.ParseException;
-import java.text.SimpleDateFormat;
-import java.time.*;
-import java.time.temporal.ChronoUnit;
-import java.util.*;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.math3.util.Pair;
 import org.apache.poi.ss.usermodel.*;
@@ -56,6 +42,22 @@ import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
+
+import java.io.*;
+import java.security.GeneralSecurityException;
+import java.security.InvalidKeyException;
+import java.security.NoSuchAlgorithmException;
+import java.text.DateFormat;
+import java.text.ParseException;
+import java.text.SimpleDateFormat;
+import java.time.*;
+import java.time.temporal.ChronoUnit;
+import java.util.*;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
+import static com.hcmus.mentor.backend.controller.payload.returnCode.GroupReturnCode.*;
+import static com.hcmus.mentor.backend.controller.payload.returnCode.InvalidPermissionCode.INVALID_PERMISSION;
 
 @Service
 @RequiredArgsConstructor
@@ -1901,30 +1903,41 @@ public class GroupServiceImpl implements GroupService {
     public List<ChannelForwardResponse> getGroupForwards(UserPrincipal user, Optional<String> name) throws ServerException, InsufficientDataException, ErrorResponseException, IOException, NoSuchAlgorithmException, InvalidKeyException, InvalidResponseException, XmlParserException, InternalException {
         List<Group> groups = groupRepository.findByMenteesContainsOrMentorsContains(user.getId(), user.getId());
         groups = groups.stream().filter(group -> group.getStatus() == Group.Status.ACTIVE).toList();
-        var groupIds = groups.stream().map(Group::getId).collect(Collectors.toList());
-        List<Channel> channels = channelRepository.findByIdIn(groupIds);
+        var listChannelIds = groups.stream().map(Group::getChannelIds).toList();
+        List<String> lstChannelIds = new ArrayList<>();
+       for(List<String> ids: listChannelIds){
+           lstChannelIds.addAll(ids);
+       }
+        List<Channel> channels = channelRepository.findByIdIn(lstChannelIds);
 
         List<GroupForwardResponse> groupForwardResponses = new ArrayList<>();
+        List<ChannelForwardResponse> channelForwardResponses = new ArrayList<>();
         for (Group group : groups) {
             GroupForwardResponse groupForwardResponse = GroupForwardResponse.from(group);
             if (group.getImageUrl() != null && !group.getImageUrl().isEmpty())
                 groupForwardResponse.setImageUrl(blobStorage.getUrl(group.getImageUrl()));
 
             groupForwardResponses.add(groupForwardResponse);
+            channelForwardResponses.add(ChannelForwardResponse.builder()
+                    .id(group.getId())
+                    .name("Cuộc trò chuyện chung")
+                    .group(groupForwardResponse)
+                    .build());
         }
 
-        List<ChannelForwardResponse> channelForwardResponses = new ArrayList<>();
         for (Channel channel : channels) {
-            ChannelForwardResponse channelForwardResponse = ChannelForwardResponse.from(channel);
+            if(channel.getStatus() == Channel.Status.ACTIVE){
+                ChannelForwardResponse channelForwardResponse = ChannelForwardResponse.from(channel);
 
-            channelForwardResponse.setGroup(groupForwardResponses.stream().filter(groupForwardResponse -> groupForwardResponse.getId().equals(channel.getParentId())).findFirst().orElse(null));
-            channelForwardResponses.add(channelForwardResponse);
+                channelForwardResponse.setGroup(groupForwardResponses.stream().filter(groupForwardResponse -> groupForwardResponse.getId().equals(channel.getParentId())).findFirst().orElse(null));
+                channelForwardResponses.add(channelForwardResponse);
+            }
         }
 
         if (name.isPresent() && !name.get().isEmpty()) {
             channelForwardResponses = channelForwardResponses.stream().filter(channelForwardResponse -> channelForwardResponse.getName().contains(name.get())).collect(Collectors.toList());
         }
 
-        return channelForwardResponses;
+        return channelForwardResponses.stream().sorted(Comparator.comparing(ChannelForwardResponse::getGroupName)).toList();
     }
 }
